Update PrintAllSubsets.java